enh: upgrade Selenium to 4.11, switch from cglib to bytebuddy